...
                                                        </userDefinedRuntimeAttribute>
                                                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
                                                    </userDefinedRuntimeAttributes>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sU2-mn-LNl" userLabel="Like Button">
                                                    <rect key="frame" x="354" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="Like"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="44" id="jvW-bm-Uz2"/>
                                                        <constraint firstAttribute="height" constant="44" id="mNN-FZ-BRD"/>
                                                    </constraints>
                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                    <state key="normal" image="like_button_on"/>
...
                                <connections>
                                    <outlet property="delegate" destination="qit-iW-fU7" id="F9a-cq-koj"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8sd-vz-3Nt">
                                <rect key="frame" x="8" y="56" width="48" height="48"/>
                                <accessibility key="accessibilityConfiguration" identifier="Back"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="48" id="JGr-ew-Ug1"/>
                                    <constraint firstAttribute="height" constant="48" id="UJm-Wr-qFL"/>
                                </constraints>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
...
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MhJ-bC-wSV">
                                <rect key="frame" x="16" y="724" width="382" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="pCs-Gx-Sft"/>
                                </constraints>
                                <color key="tintColor" red="0.1019607843" green="0.1058823529" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
...
                                <rect key="frame" x="0.0" y="92" width="414" height="4"/>
                                <color key="progressTintColor" name="YP Black"/>
                            </progressView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="Z7y-lJ-cM3"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="UnsplashWebView"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="L1k-gv-Sj4" secondAttribute="trailing" id="BQx-Sq-OWd"/>
                            <constraint firstItem="Z7y-lJ-cM3" firstAttribute="trailing" secondItem="cDm-G7-vHd" secondAttribute="trailing" id="GVa-ca-do9"/>
                            <constraint firstItem="cDm-G7-vHd" firstAttribute="top" secondItem="Z7y-lJ-cM3" secondAttribute="top" id="W8p-e3-iMz"/>
                            <constraint firstItem="L1k-gv-Sj4" firstAttribute="top" secondItem="fFl-Zs-HIL" secondAttribute="top" id="ghQ-CP-Db0"/>
                            <constraint firstItem="L1k-gv-Sj4" firstAttribute="leading" secondItem="fFl-Zs-HIL" secondAttribute="leading" id="qds-Et-7wK"/>
...
